--- a/rust-client/Cargo.toml
+++ b/rust-client/Cargo.toml
@@ -4,13 +4,14 @@ version = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-anchor-lang = "0.28.0"
-anchor-spl = "0.28.0"
-anchor-client = "0.28.0"
+anchor-lang = "0.30.0"
+anchor-spl = "0.30.0"
+anchor-client = "0.30.0"
 clap = { version = "3.2.25", features = ["derive", "env"] }
-solana-program = { version = "=1.16.16" }
-solana-rpc-client = { version = "=1.16.16" }
-solana-sdk = { version = "=1.16.16" }
+solana-sdk = "=1.18.11"
+solana-client = "=1.18.11"
+solana-version = "=1.18.11"
+solana-program = "=1.18.11"
 spl-associated-token-account = "2.2.0"
 anyhow = "1.0.57"
 spl-token = "3.5.0"
