--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,3 +12,6 @@ wallet = "/home/guantian/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[toolchain]
+anchor_version = "0.30.1"
