--- a/programs/dynamic-amm/Cargo.toml
+++ b/programs/dynamic-amm/Cargo.toml
@@ -10,11 +10,12 @@ no-entrypoint = []
 cpi = ["no-entrypoint"]
 localnet = []
 staging = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [lib]
 crate-type = ["cdylib", "lib"]
 name = "dynamic_amm"
 
 [dependencies]
-anchor-lang = { version="0.30.0", features = ["event-cpi"] }
-anchor-spl = "0.30.0"
+anchor-lang = { version="0.30.1", features = ["event-cpi"] }
+anchor-spl = "0.30.1"
