--- a/programs/dynamic-vault/Cargo.toml
+++ b/programs/dynamic-vault/Cargo.toml
@@ -9,11 +9,12 @@ default = ["cpi"]
 no-entrypoint = []
 cpi = ["no-entrypoint"]
 localnet = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [lib]
 crate-type = ["cdylib", "lib"]
 name = "dynamic_vault"
 
 [dependencies]
-anchor-lang = { version="0.30.0", features = ["event-cpi"] }
-anchor-spl = "0.30.0"
+anchor-lang = { version="0.30.1", features = ["event-cpi"] }
+anchor-spl = "0.30.1"
