--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
 [workspace]
 members = [
     "programs/*",
-    "rust-client",
-    "dynamic-amm-quote"
 ]
 resolver = "2"
 
@@ -10,3 +8,6 @@ resolver = "2"
 version = "0.0.1"
 authors = ["Andrew"]
 edition = "2021"
+
+[profile.release]
+overflow-checks = true
