--- a/programs/dynamic-vault/Cargo.toml
+++ b/programs/dynamic-vault/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 default = ["cpi"]
 no-entrypoint = []
 cpi = ["no-entrypoint"]
+no-idl = []
 localnet = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
