--- a/programs/dynamic-vault/Cargo.toml
+++ b/programs/dynamic-vault/Cargo.toml
@@ -10,7 +10,7 @@ no-entrypoint = []
 cpi = ["no-entrypoint"]
 no-idl = []
 localnet = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [lib]
 crate-type = ["cdylib", "lib"]
