--- a/programs/dynamic-vault/Cargo.toml
+++ b/programs/dynamic-vault/Cargo.toml
@@ -16,5 +16,5 @@ crate-type = ["cdylib", "lib"]
 name = "dynamic_vault"
 
 [dependencies]
-anchor-lang = { version="0.30.1", features = ["event-cpi"] }
+anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["event-cpi"] }
 anchor-spl = "0.30.1"
