--- a/programs/dynamic-vault/Cargo.toml
+++ b/programs/dynamic-vault/Cargo.toml
@@ -17,4 +17,4 @@ name = "dynamic_vault"
 
 [dependencies]
 anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["event-cpi"] }
-anchor-spl = "0.30.1"
+anchor-spl = { git = "https://github.com/bridgesplit/anchor" }
