--- a/programs/dynamic-amm/Cargo.toml
+++ b/programs/dynamic-amm/Cargo.toml
@@ -17,5 +17,5 @@ crate-type = ["cdylib", "lib"]
 name = "dynamic_amm"
 
 [dependencies]
-anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["event-cpi"] }
-anchor-spl = { git = "https://github.com/bridgesplit/anchor" }
+anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
+anchor-spl = { version = "0.30.1"}
